--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div id="button">rotate!</div>
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
