download image implemented

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,8 @@
 </head>
   <body>
     <div id="app">
-      <div id="button">rotate!</div>
+      <div id="button" class="myButtons">rotate!</div>
+      <a id="button-download" class="myButtons">download</a>
     </div>
     <script src="bundle.js"></script>
   </body>
