--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,12 @@
   <title>votre titre ici</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+  <base href="/">
 </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      
+    </div>
     <script src="bundle.js"></script>
   </body>
 </html>
